exercises/07_capstone/00_overview/tests/fail/missing_initial.stderr
error: one variant must be marked `#[initial]`
 --> tests/fail/missing_initial.rs:6:1
  |
6 | / enum TrafficLight {
7 | |     Red,
8 | |     Green,
9 | | }
  | |_^
